# TorBoxFinder

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
nzb_tui/: __init__.py  __main__.py  app.py  config.py  download_screen.py  helpers.py  nzb_parser.py  torbox_client.py  torbox_search.py
torboxfinder/: __init__.py  __main__.py  app.css  app.py  config.py  download_screen.py  helpers.py  nzbfinder.py  torbox_client.py  torbox_search.py
